# LLM-Engineering

./: README.md  pyproject.toml
Gen AI Apps/: .gitignore  main.py  pyproject.toml
Gen AI Apps/AgenticChatbot/: README.md  app.py  requirements.txt
Gen AI Apps/Agentic_RAG_for_car_inventory/: README.md
Gen AI Apps/BlogAgentic/: README.md  app.py  langgraph.json  requirements.txt
Gen AI Apps/Claude_code_open_source_model/: OLLAMA_BASED_MODELS.md  OPENSOURCE_PROVIDER_MODELS.md  README.md  config.yaml  portfolio.html
Gen AI Apps/Fastapi_telemetry_llm_observability/: main.py
Gen AI Apps/LLM_Code_Sandbox/: Dockerfile  README.md  docker_sandbox.py  llm_code_sandbox.ipynb
Gen AI Apps/LiteLLM/: README.md  config.yaml  test.ipynb
Gen AI Apps/Local AI Guide/: README.md  app.py  app_v1.py  app_v2.py  appv0.py  test.py
Gen AI Apps/MoM_Generator/: testing.py
Gen AI Apps/Pandas_Agent/: README.md  app.py  caching.py  main.py  pandas_agent.py
Gen AI Apps/SQL_AGent/: app.py
Gen AI Apps/Simple Blog Agent/: app.py
Gen AI Apps/Writing Assistant/: README.md  main.py  requirements.txt
Gen AI Apps/agents_and_rag/: README.md  autonomous_agent.ipynb  autonomous_agent_with_tools.ipynb  custom_tools.ipynb  rag.ipynb
Gen AI Apps/assets/: Agentic AI.pptx
Gen AI Apps/langgraph_tutorials/: 00_typed_dict.ipynb  01_Basics.ipynb  02_tool_calling.ipynb  03.Agent_basics.ipynb  04_RAG_Basics.ipynb  05_RAG_Agent.ipynb  06_RAG_Agent_with_memory.ipynb  07_Advanced_State.ipynb  08_Human_in_the_loop.ipynb  09_Parallel_execution.ipynb  11_Subgraphs.ipynb  (+5 more)
LLMs/: pyproject.toml
(+127 files in other folders)
