[project]
name = "gen-ai-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.46.0",
]
