[project]
name = "llm-engg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "jupyter>=1.1.1",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "openai>=1.65.2",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
]
